Client sends hello packet after server Server sends hello packet first Added proxLib config setting Changed raw System.out.printf to debug logs, changed messages Reformat code